--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -22,10 +22,10 @@
           <div class="img" style="background-image: url('{{ imgUser }}');"></div>
         </div>
         <div class="btn">
-          <div style="height: 100%; width: 90%; display: flex; justify-content: space-between">
-            <a class="a1" href="">
+          <div style="height: 100%; width: 90%; display: flex; justify-content: end">
+            <!-- <a class="a1" href="">
               <div class="ina">STATUS</div>
-            </a>
+            </a> -->
   
             <a class="a2" href=""> <div class="ina">STANDING</div></a>
           </div>
