--- a/src/app/components/all-user/all-user.component.html
+++ b/src/app/components/all-user/all-user.component.html
@@ -20,10 +20,10 @@
         <div class="img" style="background-image: url('{{ img }}');"></div>
       </div>
       <div class="btn">
-        <div style="width: 90%; display: flex; justify-content: space-between">
-          <a class="a1" href="">
+        <div style="width: 90%; display: flex; justify-content: end">
+          <!-- <a class="a1" href="">
             <div class="ina">STATUS</div>
-          </a>
+          </a> -->
 
           <a class="a2" routerLink="/standingAdmin"> <div class="ina">STANDING</div></a>
         </div>
