--- a/src/app/components/all-user/all-user.component.scss
+++ b/src/app/components/all-user/all-user.component.scss
@@ -45,7 +45,7 @@ nav {
     align-items: center;
     width: 50%;
     height: 100%;
-    border-left: 1px solid black;
+    border-right: 2px solid black;
 }
 
 .ina {
@@ -138,6 +138,7 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left: 1vw;
 }
 p{
     height:50%; display: flex;  align-items: center;
