--- a/src/app/components/standing-admin/standing-admin.component.scss
+++ b/src/app/components/standing-admin/standing-admin.component.scss
@@ -44,7 +44,7 @@ nav {
     align-items: center;
     width: 50%;
     height: 100%;
-    border-left: 1px solid black;
+    border-right: 2px solid black;
 }
 
 .ina {
