--- a/src/app/components/user-profile/user-profile.component.scss
+++ b/src/app/components/user-profile/user-profile.component.scss
@@ -51,7 +51,7 @@ nav {
     align-items: center;
     width: 50%;
     height: 100%;
-    border-left: 1px solid black;
+    border-right: 2px solid black;
 }
 
 .ina {
@@ -98,6 +98,7 @@ nav {
     font-size: 3vw;
     width: 100%;
     height: 100%;
+    margin-left: 1vw;
     display: flex;
     align-items: center;
     cursor: pointer;
