--- a/src/app/components/show/show.component.html
+++ b/src/app/components/show/show.component.html
@@ -1,1 +1,16 @@
-<p>show works!</p>
+<form>
+    <label for="fname">delay :</label>
+    <input type="number" id="fname" name="delay"><br><br>
+    <button type="submit">Enter</button>
+  </form>
+
+  <div>
+    <div>image delay now</div>
+    <div style="display: grid; grid-template-columns: 1fr 1fr 1fr;">
+        <div *ngFor="let i of this.data">
+
+           <div style="width: 10vh; height: 10vh;"> <img src="{{i.URL}}" alt="" width="100%" height="100%"></div>
+        </div>
+    </div>
+  
+  </div>
