--- a/src/app/components/my-profile/my-profile.component.html
+++ b/src/app/components/my-profile/my-profile.component.html
@@ -15,7 +15,7 @@
           </a>
           <div class="menu">
             <div style=" color: beige;">USER: {{name}}</div>
-            <a routerLink="">YOUR STATUS</a>
+            <!-- <a routerLink="">YOUR STATUS</a> -->
             <a routerLink="/standing">STANDING</a>
             <a routerLink="/upload">UPLOAD/EDIT</a>
           </div>
