--- a/src/app/components/standing/standing.component.html
+++ b/src/app/components/standing/standing.component.html
@@ -11,7 +11,7 @@
     </a>
     <div class="menu">
       <div style=" color: beige;">USER: {{name}}</div>
-      <a routerLink="/user">YOUR STATUS</a>
+      <!-- <a routerLink="/user">YOUR STATUS</a> -->
       <a style="color: #513D31;">STANDING</a>
       <a routerLink="/upload">UPLOAD/EDIT</a>
     </div>
