--- a/src/app/components/upload/upload.component.html
+++ b/src/app/components/upload/upload.component.html
@@ -13,7 +13,7 @@
           </div>
           <div class="menu">
             <div style="color: beige;">USER: {{name}}</div>
-            <a class="a" routerLink="/upload">YOUR STATUS</a>
+            <!-- <a class="a" routerLink="/upload">YOUR STATUS</a> -->
             <a class="a" routerLink="/standing">STANDING</a>
             <div class="on" style="color: #6F1909;" routerLink="/upload">UPLOAD/EDIT</div>
           </div>
