--- a/src/app/components/votelogin/votelogin.component.html
+++ b/src/app/components/votelogin/votelogin.component.html
@@ -13,7 +13,7 @@
           </a>
           <div class="menu">
             <div style=" color: beige;">USER: {{this.name}}</div>
-            <a routerLink="">YOUR STATUS</a>  
+            <!-- <a routerLink="">YOUR STATUS</a>   -->
             <a routerLink="/standing">STANDING</a>
             <a routerLink="/upload">UPLOAD/EDIT</a>
           </div>
