--- a/src/app/components/all-user/all-user.component.html
+++ b/src/app/components/all-user/all-user.component.html
@@ -16,7 +16,7 @@
             height="100%"
           />
         </div>
-        <div style="font-size: 2vw; font-weight: bolder">Admin : Killau</div>
+        <div style="font-size: 2vw; font-weight: bolder">Admin : {{name}}</div>
         <div class="img" style="background-image: url('{{ img }}');"></div>
       </div>
       <div class="btn">
