--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -18,7 +18,7 @@
               height="100%"
             />
           </div>
-          <div style="font-size: 2vw; font-weight: bolder">Admin : Killau</div>
+          <div style="font-size: 2vw; font-weight: bolder">Admin : {{name}}</div>
           <div class="img" style="background-image: url('{{ imgUser }}');"></div>
         </div>
         <div class="btn">
