--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -27,7 +27,7 @@
               <div class="ina">STATUS</div>
             </a> -->
   
-            <a class="a2" href=""> <div class="ina">STANDING</div></a>
+            <a class="a2" routerLink="/standingAdmin"> <div class="ina">STANDING</div></a>
           </div>
           <div (click)="logout()" class="logout">
             <mat-icon
