--- a/src/app/components/loadding/loadding.component.html
+++ b/src/app/components/loadding/loadding.component.html
@@ -1,1 +1,6 @@
-<p>loadding works!</p>
+<div style="display: flex; justify-content: center; align-items: center; margin-top: 5vh;">
+    <div>Loadding....</div>
+</div>
+<div style="width: 100%; height: 100%; display: flex; justify-content: center;align-items: center;">
+    <img src="https://media0.giphy.com/media/nu8afydwOkzgqLjerc/200w.gif?cid=6c09b952qx2pvlq4267pmrtpvoa5ogxhfkd3rbzhnbn5dv8y&ep=v1_gifs_search&rid=200w.gif&ct=g" alt="" width="50%" height="50%">
+</div>
