--- a/src/app/components/show/show.component.html
+++ b/src/app/components/show/show.component.html
@@ -1,7 +1,7 @@
 <form>
     <label for="fname">delay :</label>
-    <input type="number" id="fname" name="delay"><br><br>
-    <button type="submit">Enter</button>
+    <input type="number" id="fname"  #delay name="delay"><br><br>
+    <button type="submit" (click)="updatedelay(delay)">Enter</button>
   </form>
 
   <div>
