--- a/src/app/components/show/show.component.html
+++ b/src/app/components/show/show.component.html
@@ -1,16 +1,20 @@
-<form>
-    <label for="fname">delay :</label>
-    <input type="number" id="fname"  #delay name="delay"><br><br>
-    <button type="submit" (click)="updatedelay(delay)">Enter</button>
-  </form>
-
+<main style="display: flex; justify-content: center; align-items: center;">
   <div>
-    <div>image delay now</div>
-    <div style="display: grid; grid-template-columns: 1fr 1fr 1fr;">
-        <div *ngFor="let i of this.data">
-
-           <div style="width: 10vh; height: 10vh;"> <img src="{{i.URL}}" alt="" width="100%" height="100%"></div>
-        </div>
-    </div>
+    <form style="border-radius: 6px; padding: 5px; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); margin-top: 1.5vw; width: 100%; display: flex; justify-content: center;">
+      <label style="margin-top: 10px;" for="fname">Enter Delay :</label>
+      <input type="number" id="fname"  #delay name="delay"><br><br>
+      <button (click)="closeDialog()" type="submit" style=" box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3); border: 2px solid #C18D68; font-weight: bold; border-radius: 10px; margin-left: 5px;background-color: #C18D68; color: rgb(242, 242, 242);" (click)="updatedelay(delay)">Enter</button>
+    </form>
   
+    <div>
+      <div style="width: 100%; display: flex; justify-content: center;"><h3>IMAGE DELAY NOW</h3></div>
+      <div style="display: grid; grid-template-columns: 1fr 1fr 1fr;">
+          <div *ngFor="let i of this.data">
+             <div style="width: 10vh; height: 10vh;border-radius: 10px; "> <img src="{{i.URL}}" alt="" width="100%" height="100%"></div>
+          </div>
+      </div>
+    
+    </div>
   </div>
+ 
+</main>
