--- a/src/app/components/show/show.component.html
+++ b/src/app/components/show/show.component.html
@@ -33,7 +33,7 @@
 
     <div>
       <div style="width: 100%; display: flex; justify-content: center;align-items: flex-start;">
-        <h3>IMAGE DELAY {{this.k}} S NOW</h3>
+        <h3>IMAGE DELAY {{this.k}} 'S NOW</h3>
       </div>
       <div style="display: flex ;justify-content: flex-start;">
         <div *ngFor="let i of this.data;">
