--- a/src/app/components/my-profile/my-profile.component.html
+++ b/src/app/components/my-profile/my-profile.component.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
 </head>
 <body>
     <nav>
@@ -84,13 +83,15 @@
                        
 
                         <div class="mb-3">
-                            <label for="formFile" class="form-label">IMAGE</label>
+                            <label for="formFile" class="form-label"></label>
                             <input class="form-control"   type="file"    id="formFile" (change)="onFileChange($event)">
                           </div>
+                          
+                       
                        <div class="register">
                         <button type="submit" style="padding: 1.9%; color: white; text-decoration: none; border-radius: 10px; background-color: #7C623D;">UPDATE</button>
-
                        </div>
+                       <div   (click)="show()" style="text-decoration: underline; cursor: pointer; width: 100%; display: flex; justify-content: center; margin-top: 10px; ">change password</div>
                     </div>
                     
                     
