--- a/src/app/components/upload/upload.component.html
+++ b/src/app/components/upload/upload.component.html
@@ -60,8 +60,8 @@
         <ng-template #xxx class="edit1">
           <div style="width: 20vh; height: 20vh; display: flex; justify-content: center; align-items: center;">
             <label for="upload" style="cursor: pointer;">
-              <mat-icon>cloud_download</mat-icon>
-              <input id="upload" type="file" style="display: none;" (change)="onChangeFile($event)">
+              <mat-icon style="margin-bottom: 5px; height: 40px; width: 100%; font-size: 35px;">cloud_download</mat-icon>
+              <input id="upload" type="file" style="display: none; " (change)="onChangeFile($event)">
             </label>
               
           </div>
