--- a/src/app/components/all-user/all-user.component.html
+++ b/src/app/components/all-user/all-user.component.html
@@ -17,7 +17,7 @@
           />
         </div>
         <div style="font-size: 2vw; font-weight: bolder">Admin : {{name}}</div>
-        <div class="img" style="background-image: url('{{ img }}');"></div>
+        <div class="img" style="background-image: url('{{ img }}');" (click)="next()"></div>
       </div>
       <div class="btn">
         <div style="width: 90%; display: flex; justify-content: end">
