--- a/src/app/components/votelogin/votelogin.component.html
+++ b/src/app/components/votelogin/votelogin.component.html
@@ -46,6 +46,20 @@
 <div style="display: flex; justify-content: center; align-items: center; margin-top: 1vh;">
   <mat-icon (click)="show()">settings</mat-icon>
 </div>
+
+
+<div style="display: flex; width: 100%; justify-content: center;">
+  <div>
+    <div style="width: 10vh; height: 10vh ;display: flex;justify-content: flex-start; ">
+      <img src="{{this.image?.user1}}" alt="" width="100%" height="100%">
+    </div>
+  </div>
+ 
+  <div style="width: 10vh; height: 10vh; margin-left: 20vh;">
+    <img src="{{this.image?.user2}}" alt="" width="100%" height="100%">
+  </div>
+</div>
+
 <main>
   <!-- <div class="img1" style="border-radius: 10px; background-image: url({{this.image?.image1}});" (click)="Awin()">
   </div>
@@ -53,12 +67,14 @@
   <div class="img1" style="border-radius: 10px;  background-image: url({{this.image?.image2}});" (click)="Bwin()">
   </div> -->
 
+
   <div class="img1" style="background-image: url({{this.image?.image1}});"(click)="open(1)">
   </div>
 
-
+ 
   <h1>OR</h1>
-  <div class="img1" style="background-image: url({{this.image?.image2}});"(click)="open(2)">
+  
+  <div  class="img1" style="background-image: url({{this.image?.image2}});"(click)="open(2)">
   </div>
 
 </main>
