--- a/src/app/components/changepass/changepass.component.html
+++ b/src/app/components/changepass/changepass.component.html
@@ -11,7 +11,7 @@
             <label for="formFile" class="form-label">New Password</label><br />
             <input class="input" required="กรุณากรอกให้ครบ" type="password" formControlName="Newpass"  />
         </div>
-        <button>Change</button>
+        <button mat-raised-button color="accent">Change</button>
     </form>
 
 </main>
