--- a/src/app/components/editadmin/editadmin.component.html
+++ b/src/app/components/editadmin/editadmin.component.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
   </head>
-  <body style="background-color: #f5f5ef">
+  <body >
     <nav>
       <div class="innav">
         <div style="width: 15%; height: 10%">
@@ -35,7 +37,8 @@
           ></mat-icon>
         </div>
       </div>
-    </nav><main>
+    </nav>
+    <main style="margin-top: 30px;">
         <div class="main" >
             <div class="right">
                 <a class="back" style="cursor: pointer;" (click)="back()">BACK</a>
@@ -90,8 +93,9 @@
                               </div>
                            <div class="register">
                             <button type="submit" style="padding: 1.9%; color: white; text-decoration: none; border-radius: 10px; background-color: #7C623D;">UPDATE</button>
-    
                            </div>
+                           <div   (click)="show()" style="text-decoration: underline; cursor: pointer; width: 100%; display: flex; justify-content: center; margin-top: 10px; ">change password</div>
+
                         </div>
                         
                         
