--- a/src/app/components/votelogin/votelogin.component.html
+++ b/src/app/components/votelogin/votelogin.component.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  
 </head>
 <body>
     <nav>
@@ -47,19 +48,6 @@
   <mat-icon (click)="show()">settings</mat-icon>
 </div>
 
-
-<div style="display: flex; width: 100%; justify-content: center;">
-  <div>
-    <div style="width: 10vh; height: 10vh ;display: flex;justify-content: flex-start; ">
-      <img src="{{this.image?.user1}}" alt="" width="100%" height="100%">
-    </div>
-  </div>
- 
-  <div style="width: 10vh; height: 10vh; margin-left: 20vh;">
-    <img src="{{this.image?.user2}}" alt="" width="100%" height="100%">
-  </div>
-</div>
-
 <main>
   <!-- <div class="img1" style="border-radius: 10px; background-image: url({{this.image?.image1}});" (click)="Awin()">
   </div>
@@ -68,14 +56,48 @@
   </div> -->
 
 
-  <div class="img1" style="background-image: url({{this.image?.image1}});"(click)="open(1)">
+  <div style="width: 18%;">
+    <div style="display: flex; width: 100%; height: 3.5vw;  border-top-left-radius:24px;    background-color:#efe6e0;
+    ">
+      <div class="p2" style="background-image: url('{{this.image?.user1}}');
+      background-position: center;
+      background-size: cover;
+      width: 3.5vw;
+      border-radius: 50%;
+      height: 100%;">
+      </div>
+      <h3 style="margin-left: 1vw;">
+        {{this.image?.name1}}
+      </h3>
+    </div>
+    <div class="img1" style="background-image: url({{this.image?.image1}});"(click)="open(1)">
+    </div>
   </div>
+ 
 
  
   <h1>OR</h1>
-  
-  <div  class="img1" style="background-image: url({{this.image?.image2}});"(click)="open(2)">
+  <div style="width: 18%;">
+    <div style="display: flex; width: 100%; height: 3.5vw;  border-top-left-radius:24px;   
+     background-color:#efe6e0;
+    ">
+   
+      <div class="p2" style="background-image: url('{{this.image?.user2}}');
+      background-position: center;
+      background-size: cover;
+      width: 3.5vw;
+      border-radius: 50%;
+      height: 100%;">
+      </div>
+      <h3 style="margin-left: 1vw;">
+        {{this.image?.name2}}
+      </h3>
+    </div>
+   
+    <div  class="img1" style="background-image: url({{this.image?.image2}});"(click)="open(2)">
+    </div>
   </div>
+ 
 
 </main>
 
