--- a/src/app/components/votelogin/votelogin.component.scss
+++ b/src/app/components/votelogin/votelogin.component.scss
@@ -76,12 +76,18 @@ header {
 .img1 {
     background-position: center;
     background-size: cover;
-    width: 18%;
+    width: 100%;
     height: 22vw;
     cursor: pointer;
     transition: transform 0.4s ease;
 }
-
+.p2{
+    cursor: pointer;
+    transition: .3s;
+}
+.p2:hover{
+    transform: scale(1.1);
+}
 .img1:hover {
     transform: scale(1.08);
 }
