--- a/src/app/components/changepass/changepass.component.html
+++ b/src/app/components/changepass/changepass.component.html
@@ -1,5 +1,5 @@
-<h3 style="width: 100%; display: flex; justify-content: center;">Change Password</h3>
-<main style="width: 100%; display: flex; justify-content: center;">
+<h3 style="height: 20%;align-items: center; width: 100%; display: flex; justify-content: center;">Change Password</h3>
+<main style="height: 60%;align-items: center; width: 100%; display: flex; justify-content: center;">
     
     <form (ngSubmit)="submitForm()" [formGroup]="myform" class="form">
         <div class="mb-3">
