--- a/src/app/components/infomation/infomation.component.scss
+++ b/src/app/components/infomation/infomation.component.scss
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Heebo:wght@100..900&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Roboto+Slab:wght@100..900&family=Sriracha&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Hammersmith+One&family=Heebo:wght@100..900&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Roboto+Slab:wght@100..900&family=Sriracha&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Hammersmith+One&family=Heebo:wght@100..900&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Lexend+Mega:wght@100..900&family=Roboto+Slab:wght@100..900&family=Sriracha&display=swap');
-
 nav {
     width: 100%;
     height: 10vh;
@@ -13,13 +12,6 @@ nav {
     font-weight: 400;
     font-style: normal;
 }
-.img {
-    width: 4.4vw;
-    border-radius: 50%;
-    height: 4.4vw;
-    background-position: center;
-    background-size: cover;
-}
 
 .innav {
     width: 60%;
@@ -30,38 +22,113 @@ nav {
     gap: 2%;
 }
 
-.a1 {
+.innav2 {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50%;
-    height: 100%;
-    border-right: 2px solid black;
+    width: 40%;
     color: white;
-    text-decoration: none;
-    font-size: 1.2vw;
+    gap: 2%;
+    justify-content: flex-end;
+    margin-right: 2%;
 }
 
-.a2 {
-    font-size: 1.2vw;
-    color: white;
-    text-decoration: none;
+header {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50%;
-    height: 100%;
-    border-right: 2px solid black;
+    width: 100%;
 }
 
-.ina {
+.menu {
+    font-weight: bolder;
+    font-size: 1.5vw;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 10px;
-    height: 80%;
+    gap: 2%;
     width: 80%;
-    background-color: #6b4e28;
+}
+
+.menu a {
+    color: white;
+    text-decoration: none;
+    transition: .35s;
+}
+
+.menu a:hover {
+    color: #513D31;
+    text-decoration: underline;
+}
+
+.back {
+    width: 15%;
+    display: flex;
+    justify-content: center;
+}
+
+.title {
+    width: 70%;
+    display: flex;
+    justify-content: center;
+}
+
+.back {
+    margin-top: 1.1vw;
+    width: 15%;
+    display: flex;
+    justify-content: center;
+}
+
+.back a {
+    border-radius: 10px;
+    text-decoration: none;
+    margin-top: 2vw;
+    display: flex;
+    align-items: center;
+    padding: 2.8%;
+    color: white;
+    background-color: #513D31;
+    height: 2vw;
+}
+
+.login {
+    font-size: 3vw;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+main {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    height: 90%;
+}
+
+.main {
+    display: flex;
+    width: 85%;
+}
+
+.right {
+    width: 50%;
+
+}
+
+.right a {
+    margin-left: 6%;
+    background-color: #513D31;
+    color: white;
+    padding: 1.2%;
+    text-decoration: none;
+    font-size: 1.3vw;
+    border-radius: 10px;
+
+}
+
+.logo {
+    margin-bottom: 1vw;
+}
+.innav2 a{
+    color: #513D31;
+    text-decoration: none;
 }
 .back {
     width: 15%;
@@ -173,8 +240,16 @@ main {
 .title2 h2 {
     font-size: 1.8vw;
 }
-
+.innav2 a{
+    width: 12%;
+    border-radius: 50%;
+    background-position: center;
+    background-size: cover;
+    text-decoration: none;
+    color: white;
+}
 .left {
+    margin-top: 3.7vw;
     width: 50%;
     align-items: center;
     height: 100%;
