--- a/src/app/components/my-profile/my-profile.component.html
+++ b/src/app/components/my-profile/my-profile.component.html
@@ -46,8 +46,7 @@
                 <h1 style="margin-right:5px;">E</h1>
             </div>
             <div class="imgContain" style="height: 30%; width: 100%; display:flex; justify-content: center;">
-                <div class="img" style="background-image: url('{{data[0]?.image}}');
-                ">
+                <div class="img" style="background-image: url('{{data[0]?.image}}'); ">
                 </div>
             </div>
             <div class="info" style="margin-top: 1.6vw; width: 100%; display: flex; justify-content: center;">
