--- a/src/app/components/votenologin/votenologin.component.html
+++ b/src/app/components/votenologin/votenologin.component.html
@@ -48,11 +48,44 @@
   <div class="img1" style="background-image: url({{this.image?.image2}});" (click)="Bwin()">
   </div> -->
 
-
-  <div class="img1" style="background-image: url({{this.image?.image1}});"(click)="open(1)">
+  <div style="width: 18%;">
+    <div style="display: flex; width: 100%; height: 3.5vw;  border-top-left-radius:24px;    background-color:#efe6e0;
+    ">
+      <div class="p2" style="background-image: url('{{this.image?.user1}}');
+      background-position: center;
+      background-size: cover;
+      width: 3.5vw;
+      border-radius: 50%;
+      height: 100%;">
+      </div>
+      <h3 style="margin-left: 1vw;">
+        {{this.image?.name1}}
+      </h3>
+    </div>
+    <div class="img1" style="background-image: url({{this.image?.image1}});"(click)="open(1)">
+    </div>
   </div>
+
   <h1>OR</h1>
-  <div class="img1" style="background-image: url({{this.image?.image2}});"(click)="open(2)">
+  <div style="width: 18%;">
+    <div style="display: flex; width: 100%; height: 3.5vw;  border-top-left-radius:24px;   
+     background-color:#efe6e0;
+    ">
+   
+      <div class="p2" style="background-image: url('{{this.image?.user2}}');
+      background-position: center;
+      background-size: cover;
+      width: 3.5vw;
+      border-radius: 50%;
+      height: 100%;">
+      </div>
+      <h3 style="margin-left: 1vw;">
+        {{this.image?.name2}}
+      </h3>
+    </div>
+   
+    <div  class="img1" style="background-image: url({{this.image?.image2}});"(click)="open(2)">
+    </div>
   </div>
 
 </main>
