--- a/src/app/components/votenologin/votenologin.component.scss
+++ b/src/app/components/votenologin/votenologin.component.scss
@@ -31,7 +31,13 @@ nav {
     justify-content: flex-end;
     margin-right: 2%;
 }
-
+.p2{
+    cursor: pointer;
+    transition: .3s;
+}
+.p2:hover{
+    transform: scale(1.1);
+}
 .n3 {
     width: 20vh;
     height: 5vh;
@@ -76,12 +82,11 @@ header {
 .img1 {
     background-position: center;
     background-size: cover;
-    width: 18%;
+    width: 100%;
     height: 22vw;
     cursor: pointer;
     transition: transform 0.4s ease;
 }
-
 .img1:hover {
     transform: scale(1.08);
 }
