--- a/src/app/components/votelogin/votelogin.component.html
+++ b/src/app/components/votelogin/votelogin.component.html
@@ -84,7 +84,7 @@
      background-color:#efe6e0;
     ">
    
-      <a routerLink="/info" class="p2" style="background-image: url('{{this.image?.user2}}');
+      <a routerLink="/info/{{this.image?.UID2}}" class="p2" style="background-image: url('{{this.image?.user2}}');
       background-position: center;
       background-size: cover;
       width: 3.5vw;
