--- a/src/app/components/infomation/infomation.component.html
+++ b/src/app/components/infomation/infomation.component.html
@@ -66,7 +66,7 @@
                         
                         <div style="height: 100%; width: 20%; display: flex; justify-content: center; align-items: center;">
                             <p style="margin-left: .5vw;">{{index+1}}.</p>
-                            <div class="img1" style="background-image: url('{{i.url}}');"></div>
+                            <div class="img1" style="background-image: url('{{i?.url}}');"></div>
                       </div>
                        
                        
